force-app/main/default/objects/Krow__User_Preference__c/Krow__User_Preference__c.object-meta.xml
<CustomObject>
    <description>This is used to store the user&apos;s views from the UI. Like saving the Task Planner filter for user.</description>
    <label>User Preference</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>User Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>