force-app/main/default/objects/Krow__User_Preference__c/fields/Krow__Data__c.field-meta.xml
<CustomField>
    <fullName>Krow__Data__c</fullName>
    <description>This is containing the JSON of the saved data from the UI(eg. task Planner Filter)</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>