force-app/main/default/objects/Krow__User_Preference__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <description>For what purpose it is used/ where it is used.</description>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>